--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-up": "^1.3.7",
     "react-toastify": "^8.1.0",
     "send-email": "^1.1.3",
     "styled-components": "^5.2.1",
